--- a/projeto-site/public/Dark Souls II/darkSouls2.html
+++ b/projeto-site/public/Dark Souls II/darkSouls2.html
@@ -7,23 +7,24 @@
     <title>Dark Souls II</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../funcoes.js"></script>
+    <link rel="shortcut icon" href="../img/bonfireic.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="">
+                <a href="../index.html">
                     <img src="../img/bonfireic1.png" alt="">
                     <span>Soul<span class="atual">site</span></span>
                 </a>
             </div>
-            <div class="search-bar">
+            <!-- <div class="search-bar">
                 <div>
                     <input type="text">
                     <button>search</button>
                 </div>
-            </div>
+            </div> -->
             <div class="usuario" id="usuario">
                 <a href="../login.html">Entrar</a>
                 <a href="../cadastro.html">Cadastrar</a>
