--- a/projeto-site/public/Sekiro/Sekiro.html
+++ b/projeto-site/public/Sekiro/Sekiro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Souls</title>
+    <title>Sekiro</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../funcoes.js"></script>
     <link rel="shortcut icon" href="../img/bonfireic.png" type="image/x-icon">
@@ -46,105 +46,29 @@
     <div class="lore">
         <div class="full-lores">
             <div class="title">
-                <h1>Dark Souls</h1>
+                <h1>Sekiro: Shadows die twice</h1>
             </div>
             <div class="details">
                 <span>
-                    The world of Dark Souls is a world of cycles. Kingdoms rise and fall, ages come and go, and even
-                    time can end and restart as the flame fades and is renewed. These cycles are linked to the First
-                    Flame, a mysterious manifestation of life that divides and defines separate states such as heat
-                    and
-                    cold, or life and death. As the First Flame fades, these differences also begin to fade, such as
-                    life and death having little distinction, and humans becoming Undead. The onset of an Age of
-                    Dark,
-                    the time when the First Flame has fully died, is marked by endless nights, rampant undeath,
-                    time,
-                    space, and reality breaking down, lands collapsing and converging on one another, people
-                    mutating
-                    into monsters, darkness covering the world, and the Gods losing their power. To avoid this and
-                    prolong the Age of Fire, the bearer of a powerful soul must "link" themselves to the First
-                    Flame,
-                    becoming the fuel for another age. If this is not done, the First Flame will eventually die, and
-                    an
-                    Age of Dark will begin.
+                    The time is Sengoku
+                    Beyond the peaks of deep snow, lies the land of Ashina
+                    Sword Saint Ashina Isshin, who in but a generation conquered the realm and begun the country in
+                    the Northern Regions
+                    But that Ashina is now in mortal danger
                     <br>
                     <br>
-                    <br>
-                    The powerful Lord Souls were taken from the First Flame, used to defeat the dragons, and then to
-                    establish kingdoms. Souls are inextricably (and inexplicably) linked to fire. Souls are life,
-                    and
-                    life is fire; it stands to reason that souls are fire, as well. Without the First Flame and
-                    without
-                    souls, there is no life. The bearer of a strong soul, called a Lord, who links themselves to the
-                    First Flame, is thus rekindling the flames with their own soul, returning life to it. In the
-                    end,
-                    one could expect that all souls will have been returned to the First Flame, and the Age of Fire
-                    will
-                    have effectively ended anyways.
+                    Isshin’s grandson, and Ashina’s Commander, despairing at their plight secretly told the allies
+                    “There are no usual means left by which to protect Ashina”
+                    “This right here is when we need that prince”
                     <br>
                     <br>
-                    <br>
-                    It is inevitable that people try to find a way around this, another way to continue the Age of
-                    Fire
-                    without making sacrifices, but in every case they fail. In the first Age of Fire, the Witch of
-                    Izalith attempted to create a duplicate of the First Flame using her witchcraft and a special
-                    soul,
-                    but failed catastrophically. Instead of making another First Flame, she had created a twisted
-                    Flame
-                    of Chaos that produced distortions of life, turning herself and all her daughters into demons.
-                    These
-                    demons were malevolent, and wandered the land. Gwyn gathered up his armies and fought the demons
-                    of
-                    Chaos, eventually driving them back and shackling the Bed of Chaos to bind them. Knowing that
-                    the
-                    Age of Fire was nearing its end, under the guidance of the primordial serpent Kingseeker Frampt,
-                    Gwyn offered himself to the First Flame to stave off the Dark. As the flames surged with new
-                    life,
-                    the knights who followed him in were burnt by the flames and now wander the world as the Black
-                    Knights, hollow shells of armor who attack indiscriminately.
+                    And thus the prince is kidnapped
+                    And a prince he is in name only, without a family or vassals,
+                    but for one single ninja.
                     <br>
                     <br>
-                    <br>
-                    Before he left to link the First Flame, Gwyn gave fragments of his soul to his followers and
-                    allies.
-                    Ornstein, Gough, Ciaran, and Artorias, his four strongest knights who fought against the
-                    dragons,
-                    Seath the Paledrake, who betrayed the dragons and played a crucial role in the war, and was also
-                    granted the title of Duke and permission to build a grand archive to conduct his research, and
-                    the
-                    Four Kings of New Londo, who ruled a city of Undead. In time, another primordial serpent
-                    convinced
-                    the people of the human kingdom of Oolacile to delve into the darkness of the Abyss to unearth
-                    the
-                    grave of an ancient human. Whether through their actions or some other means, the primordial
-                    human -
-                    Manus - was resurrected and driven to madness, and his wild Humanity caused the people of
-                    Oolacile
-                    to mutate into abominations. Manus, Father of the Abyss, began to rapidly spread Dark and
-                    accelerate
-                    the growth of the Abyss, and would've started an early Age of Dark had he not been defeated.
-                    Even
-                    so, the kingdom of Oolacile was lost to the Abyss, and eventually forgotten in the modern day.
-                    Nothing remains in the present day to mark the passing of this land save for Dusk, the princess
-                    of
-                    Oolacile.
-                    <br>
-                    <br>
-                    <br>
-                    Gwyn's youngest son Gwyndolin, together with Kingseeker Frampt, sheperds the humans by Gwyn's
-                    command. Together they built giant asylums to house the countless undead, hoping against hope
-                    that
-                    one of them would be chosen to defeat the Asylum demon, and fulfill their destiny. The Undead
-                    are
-                    sent on a quest to ring the Bells of Awakening, collect the Lordvessel, slay the bearers of
-                    Gwynn's
-                    soul, then offer those souls to the Lordvessel to open the path to the Kiln of the First Flame.
-                    In
-                    doing so, the unnatural Undead are given true death and the living can enjoy another age of fire
-                    for
-                    a thousand years, while the Undead linked to the First Flame will continue to burn, alive and
-                    aware,
-                    until someone else comes to take their place. And thus, the cycle continues.
+                    This is a tale of stranding,
+                    loneliness between Lord and Retainer.
                 </span>
             </div>
         </div>
@@ -156,30 +80,30 @@
                 <a href="">
                     <div class="maiden-npc">
                         <div class="name">
-                            <h3>Siegmeyer of Catarina</h3>
+                            <h3>Kuro</h3>
                         </div>
                         <div class="image">
-                            <img src="../img/siegmeyer-of-catarina-large.jpg" alt="">
+                            <img src="../img/prince-npc-sekiro-wiki-guide.jpg" alt="">
                         </div>
                     </div>
                 </a>
                 <a href="">
                     <div class="maiden-npc">
                         <div class="name">
-                            <h3>Princess Gwynevere</h3>
+                            <h3>divine child of rejuvenation</h3>
                         </div>
                         <div class="image">
-                            <img src="../img/gwynevere_concept_art_header_full.jpg" alt="">
+                            <img src="../img/divine_child_of_rejuvenation1.jpg" alt="">
                         </div>
                     </div>
                 </a>
                 <a href="">
                     <div class="maiden-npc">
                         <div class="name">
-                            <h3>Solarie of Astora</h3>
+                            <h3>pot noble koremori</h3>
                         </div>
                         <div class="image">
-                            <img src="../img/JsGJ2u7p_400x400.jpg" alt="">
+                            <img src="../img/pot-noble-koremori.png" alt="">
                         </div>
                     </div>
                 </a>
@@ -193,30 +117,30 @@
                 <a href="">
                     <div class="maiden-npc">
                         <div class="name">
-                            <h3>Knight Artorias</h3>
+                            <h3>Lady Butterfly</h3>
                         </div>
                         <div class="image">
-                            <img src="../img/af6ad7c0c9960b95ccccbd54f8369d2a.jpg" alt="">
+                            <img src="../img/BKKpNmF7w5AbBfb8kmcMqA.jpg" alt="">
                         </div>
                     </div>
                 </a>
                 <a href="">
                     <div class="maiden-npc">
                         <div class="name">
-                            <h3>Crossbreed Priscilla</h3>
+                            <h3>Isshin the sword saint</h3>
                         </div>
                         <div class="image">
-                            <img src="../img/ee9957970d78014e5ca22b6f324d0960f0290e15_00.jpg" alt="">
+                            <img src="../img/sword-saint.jpg" alt="">
                         </div>
                     </div>
                 </a>
                 <a href="">
                     <div class="maiden-npc">
                         <div class="name">
-                            <h3>Great grey wolf Sif</h3>
+                            <h3>Isshin Ashina</h3>
                         </div>
                         <div class="image">
-                            <img src="../img/27df1b69c99cd2106543f937cbbcc575.jpg" alt="">
+                            <img src="../img/ddggdgdg.jpg" alt="">
                         </div>
                     </div>
                 </a>
