--- a/projeto-site/public/index.html
+++ b/projeto-site/public/index.html
@@ -20,19 +20,19 @@
                     <span>Soul<span class="atual">site</span></span>
                 </a>
             </div>
-            <div class="search-bar">
+            <!-- <div class="search-bar">
                 <div>
                     <input type="text">
                     <button>search</button>
                 </div>
-            </div>
+            </div> -->
             <div class="usuario" id="usuario">
                 <a href="login.html">Entrar</a>
                 <a href="cadastro.html">Cadastrar</a>
             </div>
             <div class="usuario-online" id="usr_online">
                 <a onclick="fn_menu_usuario()">
-                    <img src="img/user-solaire.png" alt="">
+                    <img src="img/user-solaire.png" alt="" id="user_box">
                 </a>
             </div>
             <div class="menu">
@@ -102,7 +102,7 @@
     <div class="last-updates">
         <div class="souls-news">
             <div class="title">
-                <h1>Demon's Souls Remake annouced</h1>
+                <h1>Demon's Souls Remake announced</h1>
             </div>
             <div class="ytbvideo">
                 <iframe src="https://www.youtube.com/embed/2TMs2E6cms4" frameborder="0"></iframe>
@@ -110,7 +110,7 @@
         </div>
         <div class="souls-news">
             <div class="title">
-                <h1>Elden Rings annouced</h1>
+                <h1>Elden Rings announced</h1>
             </div>
             <div class="ytbvideo">
                 <iframe src="https://www.youtube.com/embed/e5wwSxl0atc" frameborder="0"></iframe>
@@ -119,77 +119,135 @@
     </div>
     <div class="lore">
         <div class="content-lores">
-            <div class="souls-lore">
-                <h1>Demon's Souls</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
-            </div>
-            <div class="souls-logo">
-                <img src="img/Demons.png" alt="">
-            </div>
+            <a href="Demon Souls/demonsPage.html">
+                <div class="souls-lore">
+                    <h1>Demon's Souls</h1>
+                    <span>The world was once victim to a previous scourge of Demons in an ancient past before King
+                        Allant
+                        came to the throne. The Old One, an entity of unfathomable power, had awakened the bane of
+                        existence
+                        into the world, unleashing terrible Demons that ripped the land asunder, consequently
+                        exterminating
+                        half of humankind. Those that would become the Monumentals sought to spare the land from further
+                        harm, and combined with their knowledge of Soul Arts, returned the Old One back to its slumber.
+                        To
+                        divide the lands amidst different regions and to return life to where there was none, they
+                        ordered
+                        Archstones be constructed and placed throughout the world, all of which were connected to a
+                        central
+                        Archstone used for inter-regional travel.</span>
+                </div>
+                <div class="souls-logo">
+                    <img src="img/Demons.png" alt="">
+                </div>
+            </a>
         </div>
         <div class="content-lores">
-            <div class="souls-lore">
-                <h1>Dark Souls</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
-            </div>
-            <div class="souls-logo">
-                <img src="img/dark1.png" alt="">
-            </div>
+            <a href="Dark Souls/darkSouls.html">
+                <div class="souls-lore">
+                    <h1>Dark Souls</h1>
+                    <span>
+                        The world of Dark Souls is a world of cycles. Kingdoms rise and fall,
+                        ages come and go, and
+                        even
+                        time can end and restart as the flame fades and is renewed. These cycles are linked to the
+                        First
+                        Flame, a mysterious manifestation of life that divides and defines separate states such as
+                        heat
+                        and
+                        cold, or life and death. As the First Flame fades, these differences also begin to fade,
+                        such as
+                        life and death having little distinction, and humans becoming Undead.
+                    </span>
+                </div>
+                <div class="souls-logo">
+                    <img src="img/dark1.png" alt="">
+                </div>
+            </a>
         </div>
         <div class="content-lores">
-            <div class="souls-lore">
-                <h1>Dark Souls II</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
-            </div>
-            <div class="souls-logo">
-                <img src="img/dark2.webp" alt="">
-            </div>
+            <a href="Dark Souls II/darkSouls2.html">
+                <div class="souls-lore">
+                    <h1>Dark Souls II</h1>
+                    <span>
+                        <p>
+                            <span>
+                                "This is a limbo. A link between Drangleic and the outer world.
+                            </span>
+                            <br>
+                            <span>
+                                Fair traveller, I know that you must have a story.
+                            </span>
+                            <br>
+                            <span>
+                                Why else would you visit such a place?
+                            </span>
+                            <br>
+                            <span>
+                                This lost, decayed kingdom."
+                            </span>
+                        </p>
+                    </span>
+                </div>
+                <div class="souls-logo">
+                    <img src="img/dark2.webp" alt="">
+                </div>
+            </a>
         </div>
         <div class="content-lores">
-            <div class="souls-lore">
-                <h1>Dark Souls III</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
-            </div>
-            <div class="souls-logo">
-                <img src="img/dark3.webp" alt="">
-            </div>
+            <a href="Dark Souls III/darkSouls3.html">
+                <div class="souls-lore">
+                    <h1>Dark Souls III</h1>
+                    <span>"Only in truth the lords will abandon their thrones and the unkindled will rise. Nameless
+                        accursed undead, unfit even to be cinder. And so it is, that ash seeketh embers."</span>
+                </div>
+                <div class="souls-logo">
+                    <img src="img/dark3.webp" alt="">
+                </div>
+            </a>
         </div>
         <div class="content-lores">
-            <div class="souls-lore">
-                <h1>Bloodborne</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
-            </div>
-            <div class="souls-logo">
-                <img src="img/blood.png" alt="">
-            </div>
+            <a href="Bloodborne/">
+                <div class="souls-lore">
+                    <h1>Bloodborne</h1>
+                    <span>
+                        The hunters are a group of warriors who are dedicated to keeping their regions safe by hunting
+                        down beasts - or anything other than beasts if need be - that pose a threat. Hunters are agile
+                        fighters armed with a trick weapon, a transforming melee weapon in the right hand, and a firearm
+                        in the left. They do not employ shields, but rather take advantage of their mobility in order to
+                        avoid attacks. Hunters exist throughout the world and are not exclusive to Yharnam, since a
+                        number of characters such as the protagonist and Eileen come from the outside world and are yet
+                        still recognized as hunters. However, it is believed that the Hunters started out as a branch of
+                        the Healing Church very much like The Choir. This would mean that, at least in Yharnam, Hunters
+                        were recruited by either Gehrman or the Church itself.
+                    </span>
+                </div>
+                <div class="souls-logo">
+                    <img src="img/blood.png" alt="">
+                </div>
+            </a>
         </div>
         <div class="content-lores">
-            <div class="souls-lore">
-                <h1>Sekiro: Shadows die twice</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
-            </div>
-            <div class="souls-logo">
-                <img src="img/sekiro.png" alt="">
-            </div>
+            <a href="Sekiro/">
+                <div class="souls-lore">
+                    <h1>Sekiro: Shadows die twice</h1>
+                    <span>
+                        The time is Sengoku
+                        Beyond the peaks of deep snow, lies the land of Ashina
+                        Sword Saint Ashina Isshin, who in but a generation conquered the realm and begun the country in
+                        the Northern Regions
+                        But that Ashina is now in mortal danger
+                    </span>
+                </div>
+                <div class="souls-logo">
+                    <img src="img/sekiro.png" alt="">
+                </div>
+            </a>
         </div>
         <div class="content-lores">
             <div class="souls-lore">
                 <h1>Elden Rings</h1>
-                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, at id impedit omnis voluptate
-                    iusto! Numquam eveniet adipisci rerum fuga id quos quasi, sit ipsam debitis ipsa vitae, modi
-                    placeat.</span>
+                <span>Jogo em desenvolvimento</span>
             </div>
             <div class="souls-logo">
                 <img src="img/elden.png" alt="">
