--- a/projeto-site/public/Cadastro.html
+++ b/projeto-site/public/Cadastro.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Soulsite</title>
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="shortcut icon" href="img/bonfireic.png" type="image/x-icon">
 </head>
 
 <body>
